--- a/index.html
+++ b/index.html
@@ -1,39 +1,35 @@
-<!DOCTYPE html>
-<html lang="en">
-
+<html>
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title></title>
     <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
-    <section id="apps">
-        <h1> APPS </h1>
+    <section id="home">
+        <h1> MY INSPIRATION</h1>
         <div class="line"></div>
-        <iframe width="300" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/Hnhc1qsDSahwiQSJtt3L6SaTveVrW35ykViNHE1q_sE/embed"></iframe>
-        <iframe width="352" height="620" style="border: 0px;" src="https://studio.code.org/projects/applab/3jWDo_jqFpljlTrPWaWqtcFldyG0TmKRli_DQosxP4A/embed"></iframe>
+        <h2> Click On The Picture To View My Insipration.</h2>
+
     </section>
 
-    <section id="games">
-        <h1> GAMES </h1>
-        <div class="line"></div>
-        <a href="https://studio.code.org/projects/spritelab/x8R3yfwM04l06wH3Cgk4WjZiRFj0PJVqD4DCX03H1WI" target="_blank">
-            <img src="Game%201.png">
-        </a>
-        <a href="https://studio.code.org/projects/spritelab/3DcZEl81Avt6by2x7i92OajZCF2aB9xq_LWpxbC01zw" target="_blank">
-            <img src="game-2.png">
-        </a>
-    </section>
+    <div>
+        <span>
+            <a href="https://en.wikipedia.org/wiki/Mohammed_Siraj" target="_blank">
+                <img id="picture" src="mohammed siraj.jpg">
+            </a>
+        </span>
+        <span>
+            <a href="https://en.wikipedia.org/wiki/Harmanpreet_Kaur" target="_blank">
+                <img id="picture" src="_harmanpreet_kaur.jpg">
+            </a>
+        </span>
+    </div>
 
-    <section id="chatbot">
-        <h1> CHATBOT </h1>
-        <div class="line"></div>
-        <iframe allow="microphone;" width="350" height="430" src="https://console.dialogflow.com/api-client/demo/embedded/dc881ad9-79fc-4334-9d2b-93ab33e3726a">
-        </iframe>
-    </section>
+
+
+
 </body>
+
 
 </html>
