--- a/index.html
+++ b/index.html
@@ -1,35 +1,92 @@
 <html>
 
 <head>
-    <title></title>
+    <title> My favourite hobbies </title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css?family=Cinzel+Decorative&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Cinzel+Decorative&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
 
 <body>
-    <section id="home">
-        <h1> MY INSPIRATION</h1>
-        <div class="line"></div>
-        <h2> Click On The Picture To View My Insipration.</h2>
 
+    <center><ul class="menu">
+       <li class="links"> <a href="#cricket">ABOUT </a> </li>
+       <li class="links"><a href="#videos"> VIDEOS </a></li>
+       <li class="links"><a href="#work"> WORK </a></li>
+       <li class="links"> <a href="#early life">EARLY LIFE</a> </li>
+       <li class="links"><a href="#record"> RECORDS </a></li>
+    </ul>
+       </center>
+    
+
+    <section>
+        <img src="https://www.forbesindia.com/media/images/2019/Dec/img_125539_harmanpreet_kaur.jpg">
+        <h1> My Favourite Hobby<br><span id="cricket"> CRICKET
+            </span>
+        </h1>
     </section>
 
-    <div>
-        <span>
-            <a href="https://en.wikipedia.org/wiki/Mohammed_Siraj" target="_blank">
-                <img id="picture" src="mohammed siraj.jpg">
-            </a>
-        </span>
-        <span>
-            <a href="https://en.wikipedia.org/wiki/Harmanpreet_Kaur" target="_blank">
-                <img id="picture" src="_harmanpreet_kaur.jpg">
-            </a>
-        </span>
-    </div>
+    <section id="bio">
+        <div class="line"></div>
+        <p> Cricket is my favorite hobby and a famous sport too. It makes me feel healthy, fit and a stronger person. It makes me feel confident and proud of what I am. I started playing cricket when I was a kid of 11 years old. I have start cricket in an academy "KTCA" it's my own cricket acadmey and handeled by my father. and I am a Medium Baiser An bowler. This game is not easy we have to give our all effort. but it's fun playing cricket.</p>
+    </section>
 
+    <section id="videos">
+        <h1> VIDEOS </h1>
+        <div class="line"></div>
+        <br>
+        <iframe width="727" height="409" src="https://www.youtube.com/embed/f-Rzv1JNLuU?list=WL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <br>
+        <br>
+        <iframe width="727" height="409" src="https://www.youtube.com/embed/kqDBgq9_sx8?list=WL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <br>
+        <br>
+        <iframe width="727" height="409" src="https://www.youtube.com/embed/0AhxseQ6Ilw?list=WL" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <br>
+        <br>
+    </section>
+
+    <section id="work">
+        <h1> WORK </h1>
+        <div class="line"></div>
+        <br>
+        <iframe width="900" height="1000" src="https://en.wikipedia.org/wiki/Harmanpreet_Kaur#Career" frame-border="0"></iframe>
+    </section>
+
+    <section id="early life">
+        <h1> EARLY LIFE </h1>
+        <div class="line"></div>
+        <br>
+        <iframe width="900" height="1000" src="https://en.wikipedia.org/wiki/Harmanpreet_Kaur#Early_life" frame-broder="0"></iframe>
+    </section>
+
+    <section id="records">
+        <h1> RECORDS </h1>
+        <div class="line"></div>
+        <br>
+        <a class="records" href="https://www.news18.com/cricketnext/profile/harmanpreet-kaur/batting-59348.html" target="blank"> What Harmanpreet kaur did that she beacame Caption of Internation women's cricket.</a>
+        <br>
+    </section>
+
+    <section id="contact">
+        <div class="contact-1">\
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5904.995399667039!2d73.72451785010739!3d24.58818937716787!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3967e5ed9459536f%3A0xef4af899af3a628a!2sKeshav%20Madhav%20Mineral%20Industries!5e1!3m2!1sen!2sin!4v1620829294524!5m2!1sen!2sin" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>>
+
+            <a href="someone@example.com?Subject=Hello"></a>
+            <i class="fa fa-envelope"></i>&nbsp;&nbsp;<h3>drishtikhoda749@gmail.com </h3>
+            <br>
+            <br>
+            <a href="#"> <i class="fa fa-instagram"></i>&nbsp;&nbsp;<h3>myinstagramid</h3> </a>
+
+        </div>
+
+
+    </section>
 
 
 
 </body>
-
 
 </html>
